<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fractalList"
        android:icon="@drawable/levels"
        android:title="@string/listMenuItem"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/saveMenuItem"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/parameters"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/fractal_parameters"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/options"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/optionsMenuItem"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
</menu>
