<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FractalZoo</string>
    <string name="exitMenuItem">Exit</string>
    <string name="saveMenuItem">Save as JPG</string>
    <string name="optionsMenuItem">Options</string>
    <string name="prefs_key_fractals">Fractals</string>
    <string name="prefs_key_current_fractal">Current Fractal</string>

    <string name="mandelbrot">Mandelbrot</string>
    <string name="forest_fire">Forest Fire</string>
    <string name="sierpinski_triangle">Sierpinski Triangle</string>
    <string name="koch_snowflake">Koch Snowflake</string>
    <string name="listMenuItem">Fractal List</string>
    <string name="prefs_use_gpu_key">PREFS_USE_GPU</string>
    <string name="prefs_use_gpu_string">Use GPU</string>

    <string name="title_activity_save_bitmap">Save current screen</string>
    <string name="save_bitmap_filename">Path and file name to save</string>
    <string name="save_bitmap_set_as_background">Set as Home screen background</string>
    <string name="save_bitmap_radio_button_filename">Save as file</string>
    <string name="save_bitmap_ok_button">    OK    </string>
    <string name="intent_extra_bitmap_file">bitmap_file</string>
    <string name="save_bitmap_storage_write_rationale">The app needs write permission to save the image</string>
    <string name="save_bitmap_set_wallpaper_rationale">The Set Wallpaper permission is needed to set the Home screen wallpaper.</string>
    <string name="save_bitmap_success_toast">Current screen saved to</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="fractal_parameters">Fractal parameters</string>
    <string name="parameters_ok_button">OK</string>
    <string name="progress_bar">Progress Bar</string>

</resources>
