<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/progress_bar"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:background="@color/transparent"
        style="?android:attr/progressBarStyleLarge"
        />

    <com.draabek.fractal.gl.RenderImageView
        android:id="@+id/fractalGlView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:layout_below="@id/indeterminateBar"/>

    <com.draabek.fractal.canvas.FractalCpuView
        android:id="@+id/fractalCpuView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:layout_below="@id/indeterminateBar"/>

    <!-- Toolbar should be above content-->
    <include layout="@layout/toolbar" />
</RelativeLayout>
